changes a few code
