# resource/app/auth/router.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const controller = require("./controller");
-const { AuthorizeUserLogin } = require("../../middleware/authentication");
+// const { AuthorizeUserLogin } = require("../../middleware/authentication");
 const router = express.Router();
 
 /**
@@ -10,7 +10,7 @@ const router = express.Router();
  * @returns {Array.<User>} 200 - An array of users
  * @returns {Error} 500 - Internal server error
  */
-router.post("/singup", AuthorizeUserLogin, controller.Register);
+router.post("/singup", controller.Register);
 router.post("/signin", controller.Login);
 
 module.exports = router;
